[package]
name = "ptrace-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
proc-maps = "0.3.0"