[package]
name = "ptrace-do"
version = "0.1.3"
edition = "2021"
authors = ["ohchase"]
license = "MIT"
description = "Featureful library for interacting with unix processes through ptrace, supports x86_64, i686, arm, aarch64 remote function calls"
documentation = "https://docs.rs/ptrace-do"
readme = "README.md"
repository = "https://github.com/ohchase/ptrace-do/"
homepage = "https://github.com/ohchase/ptrace-do/"
keywords = ["hacking", "linux", "android", "ptrace", "trace"]
exclude = ["/examples"]

[lib]
crate-type = ["lib"]

[dependencies]
libc = "0.2.140"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
proc-maps = "0.3.0"
